--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -48,6 +48,7 @@ body {
   background-color: var(--primary-color);
   font-family: freight-sans-pro, sans-serif;
   font-size: var(--font-size);
+  overflow: hidden;
   // position: relative;
 }
 
