added spell check and new sort

--- a/src/scss/reset.scss
+++ b/src/scss/reset.scss
@@ -5,8 +5,12 @@
   --font-size-xlg: 2.64rem;
   --primary-color: #d5bd93;
   --secondary-color: #86716a;
+  --white-color: #fff;
+  --5-white-color: #f3f3f3;
+  --10-white-color: #bebebe;
   --black-color: #181818;
   --padding-inline: 1rem;
+  --easing: cubic-bezier(.53, -0.01, .48, 1)
 }
 
 *,
